--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -6,9 +6,17 @@
   }
 
   &__control {
-    width: 44px;
-    height: 44px;
+    width: 2.8rem;
+    height: 2.8rem;
     border-radius: 50%;
     padding: .5rem;
+  }
+
+  &__counter {
+    font-size: 1.3rem;
+  }
+
+  &__task {
+    font-size: 1rem;
   }
 }
