--- a/src/stylesheets/components/_task-list.scss
+++ b/src/stylesheets/components/_task-list.scss
@@ -5,7 +5,18 @@
 
   &__body {
     height: 20rem;
+    padding: 5px 10px;
     overflow-y: auto;
+  }
+
+  &__item {
+    transition: transform .2s ease-in;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.05);
+      background-color: #f5f5f5;
+    }
   }
 
   &__duration {
