--- a/src/stylesheets/components/_task-list.scss
+++ b/src/stylesheets/components/_task-list.scss
@@ -5,14 +5,16 @@
 
   &__body {
     height: 20rem;
-    margin: 5px;
     overflow-y: auto;
+    padding: 0 1rem;
   }
 
   &__item {
+    box-shadow: 4px 2px 5px rgba(0, 0, 0, 0.3);
+
     &:hover {
       cursor: pointer;
-      background-color: #f5f5f5;
+      background-color: transparentize(#000, .95);
     }
   }
 
