--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,3 +1,5 @@
-@import "../../node_modules/bootstrap/dist/css/bootstrap.css";
-@import "layout/footer";
-@import "components/task-list";
+@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import 'utils/mixins';
+@import 'base/typography';
+@import 'layout/footer';
+@import 'components/task-list';
