--- a/src/stylesheets/components/_task-list.scss
+++ b/src/stylesheets/components/_task-list.scss
@@ -4,7 +4,8 @@
   }
 
   &__body {
-    max-height: 25rem;
+    min-height: 15rem;
+    max-height: 30rem;
     overflow-y: auto;
     padding: 0 1rem;
   }
